@@ -1,5 +1,11 @@
 2012-03-13 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* operation/incidents/incident_detail.php: Fixed some problems	
+	with items and fields visibility of incident creation form
+	when the user has IW flag.
+
+2012-03-13 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* operation/incidents/incident_detail.php,
 	include/functions_db.php: Fixed a bug related with default
 	value for assigned used and also fixed search for external
